--- a/src/index.css
+++ b/src/index.css
@@ -98,7 +98,7 @@ button:focus-visible {
 }
 
 .box.end{
-  background-color:royalblue;
+  background-color: #6388f5;
 }
 
 .box.within{
@@ -179,6 +179,22 @@ input:focus-visible {
 }
 
 .header > h2{
+  font-weight: normal;
+}
+
+.code{
+  margin: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+  border-radius: 35px;
+  background-color: #383838;
+  width: 250px;
+  height:40px;
+}
+
+.header > h3 {
   font-weight: normal;
 }
 
