Fixed css for checkbox

--- a/src/index.css
+++ b/src/index.css
@@ -116,14 +116,11 @@ button:focus-visible {
 input{
   border-radius: 8px;
   border: 1px solid transparent;
-  padding: 0.6em 1.2em;
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
   background-color: #2f2f2f;
   cursor: pointer;
-  transition: border-color 0.25s;
-  width:155px;
   margin:5px;
 }
 
@@ -131,6 +128,7 @@ input:focus,
 input:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
+
 #legend{
   display: flex;
   justify-content: center;
@@ -342,13 +340,17 @@ input:focus-visible {
 }
 
 #menu-filters{
-  background-color: #383838;
+  background-color: #242424;
   width:230px
 }
 
 .filter-item{
   color: #f9f9f9;
   border: 1px solid transparent;
+  background-color: #383838;
+  border-radius: 25px;
+  width:200px;
+  margin: 5px auto;
 }
 
 .filter-item:hover{
@@ -361,16 +363,19 @@ input:focus-visible {
 #filter-item {
   background-color: #242424;
   border: 1px solid transparent;
-  width:10px !important;
+  width: 20px;
   height: 20px;
   color: #f9f9f9;
   border-radius:50%;
+  margin-left:-30px;
 }
 
-#filter-item .form-check .form-check-input {
-    width: 20px !important;
-    height: 20px;
-    border-radius: 50%;
-  border: 1px solid #646cff;
+#filter-item:focus-visible{
+  outline: none;
+  border:none;
 }
 
+.form-check-label{
+
+  font-size: 16px;
+}
