--- a/src/index.css
+++ b/src/index.css
@@ -379,3 +379,32 @@ input:focus-visible {
 
   font-size: 16px;
 }
+
+.box.max{
+  background-color:mediumseagreen;
+}
+
+.headerText{
+  display:flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.backIcon{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left:-60px;
+  margin-right: 10px;
+  font-size:24px;
+  cursor: pointer;
+  border: 1px solid transparent;
+  border-radius: 50%;
+  background-color: #1a1a1a;
+  width: 50px;
+  height: 50px;
+}
+
+.backIcon:hover{
+  border: 1px solid #646cff;
+}
